install dependencies using magic

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 /web/assets/** linguist-generated
 /web/** linguist-vendored
+# GitHub syntax highlighting
+pixi.lock linguist-language=YAML linguist-generated=true
